[TASK] Improve scrolling behavior & fix header position (#927)
Ensured scrolling to main sections moves to the top of the page.
Adjusted anchor scrolling so subsections are positioned correctly.
Fixed the header to the top while scrolling.
Added scroll-margin-top to prevent content from being hidden under the
header.

Resolves https://github.com/TYPO3-Documentation/render-guides/issues/845
Resolves https://github.com/TYPO3-Documentation/render-guides/issues/843

--- a/packages/typo3-docs-theme/resources/public/css/theme.css
+++ b/packages/typo3-docs-theme/resources/public/css/theme.css
@@ -25853,6 +25853,18 @@ dl.field-list > dt:after {
   }
 }
 
+header {
+  position: sticky;
+  top: 0;
+  width: 100%;
+  z-index: 1000; /* Ensures it's above other content */
+  background-color: white; /* Adjust as needed */
+}
+
+.section {
+  scroll-margin-top: 114px; /* Adjust to match the header height */
+}
+
 @media (min-width: 768px) {
   .footer-main {
     margin: calc(40px / 2 * -1);
